// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
<div
  className="issue-meta dropdown"
>
  <Toggler
    closeOnClickOutside={false}
    onRequestClose={[Function]}
    open={true}
    overlay={
      <CommentPopup
        deleteComment={[MockFunction]}
        onComment={[Function]}
        onEdit={[MockFunction]}
        placeholder=""
        toggleComment={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
      />
    }
  >
    <ButtonLink
      aria-expanded={true}
      aria-label="issue.comment.add_comment"
      className="issue-action js-issue-comment"
      onClick={[Function]}
    >
      <span
        className="issue-meta-label"
      >
        issue.comment.formlink
      </span>
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render correctly 1`] = `
<div
  className="issue-meta dropdown"
>
  <Toggler
    closeOnClickOutside={false}
    onRequestClose={[Function]}
    open={false}
    overlay={
      <CommentPopup
        deleteComment={[MockFunction]}
        onComment={[Function]}
        onEdit={[MockFunction]}
        placeholder=""
        toggleComment={[MockFunction]}
      />
    }
  >
    <ButtonLink
      aria-expanded={false}
      aria-label="issue.comment.add_comment"
      className="issue-action js-issue-comment"
      onClick={[Function]}
    >
      <span
        className="issue-meta-label"
      >
        issue.comment.formlink
      </span>
    </ButtonLink>
  </Toggler>
</div>
`;
